--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h4>This is a heading</h4>
     <h5>This is a heading</h5>
     <h6>This is a heading</h6>
+
+    <p>This is a paragraph</p>
     
 </body>
 </html>
