--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>This is a heading</h1>
+    <!-- Comments are written -->
+   <!-- <h1>This is a heading</h1>
     <h2>This is a heading</h2>
     <h3>This is a heading</h3>
     <h4>This is a heading</h4>
     <h5>This is a heading</h5>
-    <h6>This is a heading</h6>
+    <h6>This is a heading</h6> 
 
     <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -24,6 +24,49 @@
          the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
          and more recently with desktop publishing software like Aldus PageMaker including
           versions of Lorem Ipsum.</p>
+
+          <a href="https://www.lipsum.com/">Dummy Text</a>
+          <img src="https://www.stockvault.net/data/2015/06/30/174254/thumb16.jpg">
+
+    <table>
+        <tr>
+            <th>Company</th>
+            <th>Country</th>
+            <th>Contact</th>
+        </tr>
+        <tr>
+        <td>AAA</td>
+        <td>BB</td>
+        <td>CCC</td>
+    </tr>
+    <tr>
+        <td>DEF</td>
+        <td>India</td>
+        <td>GRT</td>
+    </tr>
+    </table>
+
+    <ul>
+        <li>Coffee</li>
+        <li>Milk</li>
+        <li>Tea</li>
+    </ul>
+
+    <ol>
+        <li>Coffee</li>
+        <li>Milk</li>
+        <li>Tea</li>
+    </ol> -->
+
+
+    <h1>Aiswarya's component library</h1>
+    <p><b>Aiswarya Raju</b> is attending 
+        web development session and is currently coding the html page.<br><br>
+    This is a component library created by her to better design each element.<br><br>After creating this library she is going to use the components in her<b> portfolio, blog and all projects</b> created. 
+    This will ensure that all her projects have <b>consistent themeing and styling</b></p>
+    <hr>
+
+
     
 </body>
 </html>
